--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -2,11 +2,18 @@
 	controllerName="sap.ui.demo.walkthrough.controller.InvoiceList"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
-	<List
-			headerText="{i18n>invoiceListTitle}"
+	<List 
+		id="invoiceList"
+		headerText="{i18n>invoiceListTitle}"
 		class="sapUiResponsiveMargin"
 		width="auto"
-		items="{invoice>/Invoices}">
+		items="{
+        path : 'invoice>/Invoices',
+			sorter : {
+				path : 'ShipperName',
+				group : true
+			}
+      }" >
          <headerToolbar>
          <Toolbar>
             <Title text="{i18n>invoiceListTitle}"/>
